--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 # Required metadata: all are user defined, give your preferred key
-sonar.projectKey=:package_name
-sonar.projectName=:namespace_tool_name
+sonar.projectKey=nova-catalogs
+sonar.projectName=NovaCatalogs
 # Path to the parent source code directory. Such as:
 sonar.sources=src,resources
 # if you want to analyze both PHP and JavaScript, comment this variable
